templates/gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "gateway"
  labels:
    app: "gateway"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "gateway"
  template:
    metadata:
      labels:
        app: "gateway"
        environment: "production"
        tier: "geoserver"
        monitoringActuator: enabled
    spec:
      containers:
      - name: gateway
        image: geoservercloud/geoserver-cloud-gateway:2.27.1.0
        ports:
         - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 50
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 50
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
  - name: health
    port: 8081
    targetPort: 8081
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: gateway
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations: {}
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "server: hide";
    #   more_set_headers "X-Content-Type-Options: nosniff";
    #   more_set_headers "X-Frame-Options: DENY";
    #   more_set_headers "X-Xss-Protection: 0";
    #   more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
    #   more_set_headers "Content-Security-Policy: default-src 'self' https://geoserver.yourdomain.com";
    #   more_set_headers "Cross-Origin-Resource-Policy: same-site";
spec:
  ingressClassName: nginx
  rules:
  - host: geoserver.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
  tls:
    - hosts:
      - geoserver.yourdomain.com
      secretName: tls-secret
